src/components/collections-grid/collections-grid.module.scss
@import '../../base/module';

.ShopByRoom {
  padding: 80px 0;
  text-align: center;
  h2 {
    margin-bottom: 60px;
  }
  .collectionsGrid {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: repeat(2, 1fr);
    column-gap: 40px;
    row-gap: 30px;
    margin-bottom: 50px;

    @media (min-width: $tablet) {
      grid-template-columns: repeat(4, 1fr);
      grid-template-rows: repeat(1, 1fr);
    }

    .gridItem {
      .imgBox {
        width: 100%;
        aspect-ratio: 1/1;
        position: relative;
        overflow: hidden;
        background: $color-sage;
      }
      img {
        width: 100%;
        height: 100%;
        border-radius: 250px;
        display: block;
        margin: 0 auto;
        padding: 25px;
      }
      h3 {
        margin-top: 10px;
        color: $color-black;
        font-size: 28px;
        text-transform: capitalize;
      }
    }
  }
}

.image {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 100%;
  height: 100%;
  transition: all 0.15s ease-in-out;
}

.buttonArea {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  gap: 25px;
  @media (min-width: $tablet) {
    gap: 50px;
  }
}

.viewWorkButton {
  min-width: 250px;
  height: 65px;
  background: $color-orange;
  font-family: $font-secondary;
  font-weight: 600;
  color: #fff;
  text-transform: uppercase;
  line-height: 108%;
  letter-spacing: 0.125em;
  display: block;
  margin: 0 auto;
  @media (min-width: $tablet) {
    min-width: 296px;
  }
}

button::after {
  content: '\0279D';
  margin-left: 10px;
  font-size: 1.1em;
}

.horizontalLine {
  width: 100%;
  height: 1px;
  background-color: $color-orange;
  margin: 20px 0;
}

